--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "hash_ring_avilatek",
+  "name": "@guillejimenez0812/hash_ring",
   "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,11 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^22.15.19",
+    "semantic-release": "^24.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
