--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,9 @@
 name: Publish Package to npm
 
 on:
-  release:
-    types: [created] # Se activa cuando se crea una nueva release
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -10,22 +11,21 @@ permissions:
   pull-requests: write
 
 jobs:
-  release: 
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: 
-          node-version: "lts/*"
+        with:
+          node-version: 'lts/*'
       - run: npm ci
       - run: npm run build
       - run: npm audit signatures
       - name: Publish
-        env: 
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm run semantic-release
-      
 
   # publish-npm:
   #   runs-on: ubuntu-latest
