--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@guillejimenez0812/hash_ring",
+  "name": "hash_ring",
   "version": "1.0.4",
   "description": "",
   "main": "index.js",
